# learndl

./: .cursorignore  .gitignore  2.3.2 modernTCN model.ipynb  2.3.3 patchTST.ipynb  2.3.4 TSMixer model.ipynb  CLAUDE.md  FactorUtility.ipynb  NeuralNetwork.ipynb  README.md  TODO_data.md  TODO_interactive.md  TODO_res_algo.md  Tushare.ipynb  Untitled  WriteNewNetwork.ipynb  adaboost.ipynb  alpha_decay.ipynb  anomaly_precursor.py  barra.ipynb  boost.ipynb  cli.py  custom_opt_config.yaml  cvxpy.ipynb  data_preprocessing.py  data_processing.ipynb  data_processing.py  data_transfer.ipynb  data_update.py  distribution.ipynb  download_js_fut_min.py  download_kline.py  dump.ptf  etop.csv  faclist.csv  faclist.xlsx  factor_coverage_agg.csv  go.py  go1.py  hidden_extractor.ipynb  if_train_adjust.ipynb  (+59 more)
.context/: CLAUDE.md  _index.yaml  overview.md
.context/.obsidian/: workspace.json
.context/modules/: api_layer.md  boost_models.md  data_pipeline.md  factor_engine.md  interactive_app.md  nn_models.md  project_infra.md  shell_opener.md  trading.md
.context/workflows/: daily_update.md  training_run.md
.cursor/plans/: 双分支依赖升级.plan.md
.cursor/rules/: classmethod-.mdc  global-rules.mdc  project-rules.mdc
.resources/: mosek.lic
.resources/certificate/: mosek.lic
.resources/instructions/: uv_instruction.md
.resources/model_discussion/: moe_design_discussion.md
.resources/notebooks/: optuna.ipynb  rcquant.ipynb  stock_factor.ipynb  trade_port_analysis.ipynb
.resources/tests/: test_calendar_full.py
.resources/todo/: anomaly_precursor.py  compile.ipynb  compile.md
.streamlit/: config.toml
QuantFrame/portfolios/: optimizer.7z
QuantFrame/project/: update_routine.py
bak_data/: adj_factor_20250815.csv  adj_factor_20250818.csv  adj_factor_20250819.csv  adj_factor_20250820.csv  adj_factor_20250821.csv  daily_20250815.csv  daily_20250818.csv  daily_20250819.csv  daily_20250820.csv  daily_20250821.csv  daily_basic_20250815.csv  daily_basic_20250818.csv  daily_basic_20250819.csv  daily_basic_20250820.csv  daily_basic_20250821.csv  idx_weekly_20250815.csv  index_daily_20250815.csv  moneyflow_20250815.csv  moneyflow_20250818.csv  moneyflow_20250819.csv  moneyflow_20250820.csv  moneyflow_20250821.csv  stk_limit_20250815.csv  stk_limit_20250818.csv  stk_limit_20250819.csv  stk_limit_20250820.csv  stk_limit_20250821.csv  stock_list.csv  weekly_20250815.csv
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
configs/: .confidential.yaml  config_data_type.yaml  config_logger_old.yaml  config_train.yaml  logger.yaml  model_default.yaml  model_gru.yaml  model_patch_tst.yaml  model_tra.yaml  train_param.yaml  train_param_old.yaml
configs/boost/: catboost.yaml  lgbm.yaml  xgboost.yaml
configs/constant/: project.yaml
configs/factor/: benchmarks.yaml  custom_opt_config.yaml  default_opt_config.yaml  risk_factors.yaml  trade_util_params.yaml
configs/fmp/: custom.yaml  default.yaml
configs/glob/: default_train.yaml  logger.yaml
configs/model/: callbacks.yaml  conditional.yaml  default.yaml  env.yaml  factor_vae.yaml  gru.yaml  gru_dsize.yaml  input.yaml  model.yaml  patch_tst.yaml  ple_gru.yaml  resnet_gru.yaml  tra.yaml  train.yaml
configs/nn/: gru.yaml  resnet_gru.yaml  risk_att_gru.yaml  tft.yaml  tra.yaml
configs/preference/: project.yaml  shell.yaml  shell_opener.yaml  terminal_opener.yaml  update_schedule.yaml  verbosity.yaml
configs/proj/: model_settings.yaml  proj_settings.yaml  registered_models.yaml
configs/registry/: db_models_mapping.yaml
configs/reserved/: tushare_indus.json  tushare_indus.yaml
configs/samples/: a_simple_gru_of_day_data.yaml  optuna_lgbm_of_gru_hidden copy.yaml
configs/schedule/: gru_dfl2.yaml  gru_l2.yaml  hidden_models.yaml  lgbm_of_factors.yaml  models.yaml  registered_models.yaml  test.yaml  worklist.yaml  xgb_of_factors.yaml  xgb_of_factors_long.yaml
configs/setting/: logger.yaml  model.yaml  project.yaml  trading_port.yaml  tushare_indus.yaml
configs/strategy/: model.yaml  trading_port.yaml
configs/trade/: port_list.yaml  portfolio_dict.yaml
configs/train/: callbacks.yaml  conditional.yaml  default.yaml  env.yaml  model.yaml  train.yaml  train_param.yaml
context/: CLAUDE.md  _index.yaml  overview.md
context/.obsidian/: workspace.json
context/modules/: boost_models.md  data_pipeline.md  factor_engine.md  gp_strategy.md  interactive_app.md  nn_models.md  project_infra.md  trading.md
context/workflows/: daily_update.md  strategy_dev.md
docs/agent/: HANDOFF.md  ROLLBACK_interactive_script_pages.md
learn_cursor/: game.js  index.html
lightning_logs/version_0/: metrics.csv
model/gruRES_day/: gru.yaml  train_param.yaml
model/gruRTN_day/: train_param.yaml
reserved/: config_train_old.yaml  gen_data.py  run_mode_old.ipynb  run_model_old.py  test_lgbt.ipynb
reserved_test/: test_lgbt.ipynb
resources/: install_path.py  rcquant_readme.md
result/: model_results.yaml
results/: model_results.yaml
runs/: README.md  computer_config.sh  daily_update.sh  launch.bat  launch.sh  weekly_update.sh
scripts/: __init__.py  custom_factor.py  dataset.py  environ.py  function.py  gen_data.py  globalvars.py  lgbt.py  logger.py  my_models.py  my_utils.py  mymodel.py  rnn_fac.ipynb  run_model.py  run_model2.py  run_model3.py
src/: DataModule.py  ModelModule copy.py  ModelModule.py  __init__.py  __version__.py  classes.py  env.py  env_util.py  environ.py  proj.py  project_setting.py  required_package.py  required_pkgs.py
src/API/: nn.py  (+6 more)
src_api/: factor.py  nn.py
src_app/: abc.py  db.py  ipywidget.py  script_lock.py
src_autorun/: daily_update.py  test.ipynb
src_runs/: _abc.py  st_recap.py  streamlit.py  streamlit2.py  widget.py
src_ui/: abc.py  db.py  ipywidget.py  main_page.py
terminal_opener/: __init__.py  preference.py  shell.py
tests/: test_func_basic_fillna.py
todo/: Untitled  compile.md  risk_avoidance.ipynb
upload/: model_results.yaml
visualization/: optuna.sqlite3
~/: .zshrc
(+3120 files in other folders)
