[project]
name = "learndl-upgrade"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["version"]  # dynamic version
dependencies = [
    "baostock>=0.9.2",
    "catboost>=1.2.10",
    "colorlog>=6.10.1",
    "cvxpy>=1.9.1",
    "dask>=2026.6.0",
    "deap>=1.4.4",
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "lightgbm>=4.6.0",
    "matplotlib>=3.11.0",
    "mosek>=11.2.2",
    "numpy>=2.4.6",
    "openpyxl>=3.1.5",
    "optuna>=4.9.0",
    "pandas>=2.3.3",
    "pandas-stubs>=3.0.3.260530",
    "pip>=26.1.2",
    "plottable>=0.1.5",
    "polars>=1.41.2",
    "portalocker>=3.2.0",
    "pymysql>=1.2.0",
    "pypinyin>=0.55.0",
    "pyreadr>=0.5.6",
    "pyright>=1.1.410",
    "pytimedinput>=2.0.1",
    "pyyaml>=6.0.3",
    "types-PyYAML>=6.0.12.20260518",
    "types-requests>=2.33.0.20260518",
    "rqdatac==3.5.2",
    "ruff>=0.15.17",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "shap>=0.52.0",
    "statsmodels>=0.14.6",
    "streamlit==1.56.0",
    "streamlit-ace>=0.1.1",
    "streamlit-autorefresh>=1.0.1",
    "tensorboard>=2.20.0",
    "torch==2.7.1",
    "tushare>=1.4.29",
    "xarray>=2026.4.0",
    "xgboost>=3.2.0",
    "fastparquet>=2026.5.0",
    "tzlocal>=5.3.1",
    "certifi>=2026.5.20",
    "truststore>=0.10.4",
    "httpx[socks]>=0.28.1",
    "curl-cffi>=0.15.0",
    "pyodbc>=5.3.0",
    "psycopg2-binary>=2.9.12",
    "streamlit-antd-components>=0.3.2",
    "py-machineid>=1.0.0",
    "deprecated>=1.3.1",
    "optuna-dashboard>=0.20.0",
    "cryptography>=49.0.0",
    "rqsdk==1.7.2",
    "setuptools>=41.0.0,<82",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.dynamic]
version = {attr = "src.__version__"}

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "resources"
]

[tool.ruff.lint]
# 2. Avoid enforcing line-length violations (`E501`)
ignore = [
    "E401" , # Multiple imports on one line
    "F541" , # f-string without any placeholders
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401" , # unused imports
    "F403" , # import *
]
"required_pkgs.py" = ["F401"]

[tool.pyright]
include = ["src" , "scripts"]
exclude = [
    "**/__pycache__",
    "**/.venv",
    "**/venv",
    "**/node_modules",
    "**/.git",
    "**/build",
    "**/dist",
    "**/.ruff_cache",
    "**/resources"
]

# 类型检查模式
typeCheckingMode = "basic"  # 或 "basic" "standard" "strict"

# Python 版本
pythonVersion = "3.12"

# 额外的搜索路径
extraPaths = ["src" , "scripts"]

# 报告选项
reportMissingImports = "warning"
reportMissingTypeStubs = "none"
reportGeneralTypeIssues = "warning"
reportOptionalMemberAccess = "warning"
reportOptionalSubscript = "warning"
reportPrivateImportUsage = "warning"

# 忽略特定错误
ignore = []
